--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "freecodecamp_random_quote_machine",
+  "name": "random-quote-machine",
   "version": "0.1.0",
   "description": "My Random Quote Machine Project",
   "main": "index.js",
   "scripts": {
-    "develop": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/texas2010/freecodecamp_random_quote_machine.git"
+    "url": "git+https://github.com/texas2010/random-quote-machine.git"
   },
   "author": "Lance - texas2010",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/texas2010/freecodecamp_random_quote_machine/issues"
+    "url": "https://github.com/texas2010/random-quote-machine/issues"
   },
-  "homepage": "https://github.com/texas2010/freecodecamp_random_quote_machine#readme",
-  "dependencies": {
-    "babel-cli": "6.26.0",
-    "babel-loader": "7.1.4",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.6.1",
-    "live-server": "1.2.0",
-    "webpack": "4.5.0",
-    "webpack-cli": "2.0.14",
-    "webpack-dev-server": "3.1.11"
+  "homepage": "https://github.com/texas2010/random-quote-machine#readme",
+  "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^4.3.0",
+    "html-loader": "^1.3.0",
+    "html-webpack-plugin": "^4.4.1",
+    "mini-css-extract-plugin": "^0.11.1",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
